--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "relocate-lazy-load",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "React Relocatable or Lazy Loading Higher Order Component",
   "main": "index.js",
   "scripts": {
@@ -18,12 +18,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ZhuGongpu/Relocate-LazyLoad"
-  },
-  "peerDependencies": {
-    "immutable": "^3.8.1",
-    "react": "^15.3.1",
-    "react-router-redux": "^4.0.5",
-    "redux-immutable": "^3.0.8"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
@@ -68,9 +62,7 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
-  },
-  "dependencies": {
+    "webpack-hot-middleware": "^2.10.0",
     "immutable": "^3.8.1",
     "react": "^15.3.1",
     "react-pure-render": "^1.0.2",
